src/macos_jev.h

/// One clipboard entry offered to Jev as a paste candidate.
typedef struct MZJevCandidate {
  int64_t row_id;
  /// UTF-8 preview of the entry. Callers pass whatever they already show in
  /// the list; mz_jev_suggest truncates and redacts before it leaves the
  /// machine.
  const char *preview;
  /// App the entry was copied from, or NULL.
  const char *source_app;
  /// MZAppContentKind value.
  int content_kind;
  /// Unix seconds the entry was last copied. Turned into a described age in
  /// code: jev-1.13 reads dates as text, not as ordered quantities, so a raw
  /// timestamp is something it cannot rank.
  int64_t copied_at;
  /// How many times the entry has been copied. A strong reuse prior.
  int copy_count;
  /// Non-zero when the user starred the entry.
  int pinned;
  /// How many times this entry has already been pasted into the destination
  /// app, from the local paste log. Code's memory, not the model's guess.
  int pastes_into_destination;
  /// Where it was copied from: window title and page or file. May be NULL.
  const char *source_context;
  /// Non-zero when this very entry went into the destination moments ago.
  int pasted_here_recently;
  /// Non-zero when an entry gathered alongside this one (same source, same
  /// minute or so) went into the destination moments ago: the "copied three
  /// things, now filling three fields" pattern.
  int sibling_pasted_here_recently;
} MZJevCandidate;
/// Check a key against the service before the user relies on it. `completion`
/// runs on the main queue with a message ready to show in Settings.
void mz_jev_verify_api_key(NSString *key, void (^completion)(BOOL ok, NSString *message));
/// Ask Jev which candidate belongs in whatever `target_pid` is about to
/// receive a paste. `completion` runs on the main queue exactly once: with a
/// positive row id for a confident pick, or 0 and a short human-readable
/// status otherwise. `runner_ups` carries the next-best row ids that were
/// still plausible, for marking without moving the selection.
void mz_jev_suggest(pid_t target_pid,
                    const MZJevCandidate *candidates,
                    size_t count,
                    void (^completion)(int64_t row_id,
                                       double confidence,
                                       NSArray<NSNumber *> *runner_ups,
                                       NSString *status));
/// What replaying one stored sample against the live model produced.
typedef struct MZJevEvalResult {
  int64_t choice_row;       ///< Row Jev chose; 0 when it chose "none".
  int accepted;             ///< Whether the acceptance rule would have acted on it.
  double probability;       ///< Probability of the chosen option.
  double default_fits;      ///< The shadow "does the newest entry fit?" noul; -1 if not asked.
  int chosen_present;       ///< Whether the row the user really pasted was a candidate.
  int input_tokens;
} MZJevEvalResult;
/// Rebuild the request for `sample_json` with the *current* builder, send it,
/// and judge the answer with the *current* acceptance rule. Blocks; CLI only.
/// Returns 0 on success.
int mz_jev_eval_sample(const char *sample_json, int64_t chosen_row, MZJevEvalResult *out);
/// Print, as JSON, exactly what Jev would be told about whatever is focused
/// `delay_seconds` from now -- long enough to click into the app in question.
/// Backs `maccy-zig jev-context`. Returns 0 on success.
int mz_jev_print_context(int delay_seconds);
/// Offline self-check of redaction, request framing and the confidence gate.
/// Returns 0 on success. Backs `maccy-zig jev-self-check`.
int mz_jev_self_check(void);