src/main.zig

const std = @import("std");
const capture_service = @import("capture_service.zig");
const storage = @import("storage.zig");
const c = @cImport({
    @cInclude("sqlite3.h");
    @cInclude("stdio.h");
    @cInclude("stdlib.h");
    @cInclude("sys/stat.h");
    @cInclude("unistd.h");
    @cInclude("time.h");
    @cInclude("macos_app.h");
    @cInclude("macos_hotkey.h");
    @cInclude("macos_paste.h");
});

/// Unix epoch seconds (matches the value stored in `last_copied_at`).
fn nowUnix() i64 {
    return @intCast(c.time(null));
}

/// Monotonic timestamp in nanoseconds for benchmarking. Uses CLOCK_MONOTONIC so
/// it isn't perturbed by clock adjustments.
fn nowNs() i128 {
    var ts: c.struct_timespec = undefined;
    _ = c.clock_gettime(c.CLOCK_MONOTONIC, &ts);
    return @as(i128, ts.tv_sec) * 1_000_000_000 + ts.tv_nsec;
}

const Config = struct {
    db_path: []const u8,
    interval_ms: u64 = 500,
    max_items: i64 = 500,
    max_items_overridden: bool = false,
    max_blob_bytes: usize = 16 * 1024 * 1024,
    /// 0 disables age-based pruning. Otherwise, unpinned items older than
    /// `max_age_days` (since last_copied_at) are deleted at startup and once
    /// per hour while the app runs. Pinned items are always preserved.
    max_age_days: i64 = 0,
    once: bool = false,
    import_source_path: ?[]const u8 = null,
    enabled_types: []const []const u8 = &default_types,
};

const default_types = [_][]const u8{
    "public.file-url",
    "public.html",
    "public.png",
    "public.rtf",
    "public.url",
    "public.url-name",
    "public.utf8-plain-text",
    "public.tiff",
    "public.jpeg",
    "public.heic",
};

const BlobView = storage.BlobView;
const Db = storage.Db;
const sqlite = storage.sqlite;

pub fn main(init: std.process.Init) !void {
    const arena = init.arena.allocator();
    const args = try init.minimal.args.toSlice(arena);
    const default_db = try defaultDbPath(arena);

    var cfg = Config{ .db_path = default_db };
    if (args.len <= 1) {
        // GUI mode runs forever; arena would keep growing because every refresh
        // dupes ~600 strings and the arena can't actually free them. c_allocator
        // makes our explicit `allocator.free` calls real, so memory is bounded.
        try cmdApp(std.heap.c_allocator, cfg);
        return;
    }
    if (std.mem.eql(u8, args[1], "ocr-check")) {
        // Times the screen-reading fallback: model load, then per-capture cost.
        if (mz_ocr_self_check() != 0) return error.OcrCheckFailed;
        return;
    }
    if (std.mem.eql(u8, args[1], "ui-self-check")) {
        // Can every control in the app's windows be reached by a click?
        if (mz_app_ui_self_check() != 0) return error.UiSelfCheckFailed;
        return;
    }
    if (std.mem.eql(u8, args[1], "jev-context")) {
        // What Jev would be told about the focused field, after a short delay
        // to click into the app being asked about.
        if (mz_jev_print_context(3) != 0) return error.JevContextFailed;
        return;
    }
    if (std.mem.eql(u8, args[1], "jev-self-check")) {
        // Offline check of the Jev redaction / framing / confidence logic.
        // Declared here rather than via @cImport because macos_jev.h pulls in
        // Foundation, which translate-c cannot chew through.
        if (mz_jev_self_check() != 0) return error.JevSelfCheckFailed;
        return;
    }
    if (std.mem.eql(u8, args[1], "help") or std.mem.eql(u8, args[1], "--help")) {
        usage();
        return;
    }

    const cmd = args[1];
    try parseOptions(args[2..], &cfg);

    if (std.mem.eql(u8, cmd, "app")) {
        try cmdApp(std.heap.c_allocator, cfg);
    } else if (std.mem.eql(u8, cmd, "import-maccy")) {
        try cmdImportMaccy(arena, cfg);
    } else if (std.mem.eql(u8, cmd, "watch")) {
        // Long-running mode -- bounded heap, not the throwaway arena.
        try cmdWatch(std.heap.c_allocator, cfg);
    } else if (std.mem.eql(u8, cmd, "once")) {
        cfg.once = true;
        try cmdWatch(arena, cfg);
    } else if (std.mem.eql(u8, cmd, "stats")) {
        try cmdStats(cfg.db_path);
    } else if (std.mem.eql(u8, cmd, "list")) {
        try cmdList(cfg.db_path);
    } else if (std.mem.eql(u8, cmd, "jev-eval")) {
        try cmdJevEval(cfg.db_path, g_eval_limit);
    } else if (std.mem.eql(u8, cmd, "bench")) {
        try cmdBench(arena, cfg);
    } else {
        std.debug.print("unknown command: {s}\n\n", .{cmd});
        usage();
    }
}

extern fn mz_jev_self_check() c_int;
extern fn mz_jev_print_context(delay_seconds: c_int) c_int;

/// Mirrors MZJevEvalResult in macos_jev.h (not @cImport-able: it pulls in
/// Foundation).
const JevEvalResult = extern struct {
    choice_row: i64 = 0,
    accepted: c_int = 0,
    probability: f64 = 0,
    default_fits: f64 = -1,
    chosen_present: c_int = 0,
    input_tokens: c_int = 0,
};
extern fn mz_jev_eval_sample(sample_json: [*:0]const u8, chosen_row: i64, out: *JevEvalResult) c_int;

/// Most recent samples to replay. Each one is a billed request.
var g_eval_limit: usize = 50;

/// `maccy-zig jev-eval`: every paste made while Jev was on left behind the
/// question's ingredients and the answer the user gave by pasting. Replaying
/// them through the current request builder and acceptance rule turns "did
/// that change help?" from a feeling into a number.
fn cmdJevEval(db_path: []const u8, limit: usize) !void {
    var db = try Db.open(db_path);
    defer db.close();
    try db.migrate();

    // --- Free: how often is the newest entry what a panel-opener wants? ---
    const ranked = try evalFetchInt(&db, "SELECT COUNT(*) FROM paste_events WHERE row_rank >= 0;");
    std.debug.print("paste log: {d} paste(s) with a known list position\n", .{ranked});
    if (ranked > 0) {
        const top = try evalFetchInt(&db, "SELECT COUNT(*) FROM paste_events WHERE row_rank = 0;");
        const near = try evalFetchInt(&db, "SELECT COUNT(*) FROM paste_events WHERE row_rank BETWEEN 1 AND 2;");
        const deep = ranked - top - near;
        std.debug.print("  newest entry (row 0): {d:.0}%   rows 1-2: {d:.0}%   deeper: {d:.0}%\n", .{
            pct(top, ranked), pct(near, ranked), pct(deep, ranked),
        });
        std.debug.print("  (row 0 is what a suggestion has to beat: it is already selected for free)\n", .{});
    }

    const total = try evalFetchInt(&db, "SELECT COUNT(*) FROM jev_samples;");
    std.debug.print("\nsamples: {d} recorded", .{total});
    if (total == 0) {
        std.debug.print("\n  none yet -- they accumulate as you paste from the panel with Jev on.\n", .{});
        return;
    }
    std.debug.print(", replaying the latest {d} (one request each)\n\n", .{@min(limit, @as(usize, @intCast(total)))});

    const stmt = try db.prepare(
        \\SELECT id, dest_bundle_id, chosen_item_id, chosen_rank, suggested_item_id, sample_json
        \\FROM jev_samples ORDER BY id DESC LIMIT ?1;
    );
    defer _ = sqlite.sqlite3_finalize(stmt);
    _ = sqlite.sqlite3_bind_int64(stmt, 1, @intCast(limit));

    var replayed: i64 = 0;
    var present: i64 = 0;
    var top1: i64 = 0;
    var accepted: i64 = 0;
    var accepted_right: i64 = 0;
    var shown_live: i64 = 0;
    var ends_right: i64 = 0;
    var tokens: i64 = 0;
    var fits_when_default_sum: f64 = 0;
    var fits_when_default_n: i64 = 0;
    var fits_when_other_sum: f64 = 0;
    var fits_when_other_n: i64 = 0;

    while (try storage.stepRow(stmt)) {
        const sample_id = sqlite.sqlite3_column_int64(stmt, 0);
        const dest = sqlite.sqlite3_column_text(stmt, 1) orelse @as([*c]const u8, @ptrCast(""));
        const chosen = sqlite.sqlite3_column_int64(stmt, 2);
        const chosen_rank = sqlite.sqlite3_column_int(stmt, 3);
        const suggested = sqlite.sqlite3_column_int64(stmt, 4);
        const json = sqlite.sqlite3_column_text(stmt, 5) orelse continue;

        var result: JevEvalResult = .{};
        const rc = mz_jev_eval_sample(@ptrCast(json), chosen, &result);
        if (rc != 0) {
            const why = switch (rc) {
                3 => "no API key readable by this binary (run the one inside MaccyZig.app)",
                5 => "request failed",
                else => "unreadable sample",
            };
            std.debug.print("  #{d}: skipped, {s}\n", .{ sample_id, why });
            if (rc == 3) return;
            continue;
        }
        replayed += 1;
        tokens += result.input_tokens;
        if (suggested != 0) shown_live += 1;
        if (result.chosen_present != 0) present += 1;
        const right = result.choice_row == chosen;
        if (right and result.chosen_present != 0) top1 += 1;
        if (result.accepted != 0) {
            accepted += 1;
            if (right) accepted_right += 1;
        }
        if (result.default_fits >= 0) {
            if (chosen_rank == 0) {
                fits_when_default_sum += result.default_fits;
                fits_when_default_n += 1;
            } else {
                fits_when_other_sum += result.default_fits;
                fits_when_other_n += 1;
            }
        }
        // What the user experiences is the row the panel ends up on: a quiet
        // Jev leaves the newest entry selected, which is right whenever the
        // newest entry is what they pasted.
        const lands_right = if (result.accepted != 0) right else chosen_rank == 0;
        if (lands_right) ends_right += 1;
        const verdict: []const u8 = if (result.accepted != 0)
            (if (!right) "moved, WRONG" else if (chosen_rank == 0) "confirmed default, RIGHT" else "moved, RIGHT")
        else
            (if (chosen_rank == 0) "quiet, default was right" else "quiet, missed");
        // Unsigned for display: Zig prints an explicit '+' on padded signed ints.
        std.debug.print("  #{d:<5} {s:<28} pasted row {d} (rank {d})  jev row {d} p={d:.2}  {s}\n", .{
            @as(u64, @intCast(sample_id)), std.mem.span(dest), chosen, chosen_rank, result.choice_row, result.probability, verdict,
        });
    }
    if (replayed == 0) return;

    std.debug.print("\nsummary over {d} replayed sample(s)\n", .{replayed});
    std.debug.print("  panel ends on the row that was pasted   {d}/{d}  ({d:.0}%)   <- the number that matters\n", .{ ends_right, replayed, pct(ends_right, replayed) });
    std.debug.print("  wanted entry was among the candidates   {d}/{d}\n", .{ present, replayed });
    std.debug.print("  Jev's first choice = what was pasted    {d}/{d}  ({d:.0}%)\n", .{ top1, present, pct(top1, present) });
    std.debug.print("  suggestions that pass the accept rule   {d}/{d}  ({d:.0}% coverage)\n", .{ accepted, replayed, pct(accepted, replayed) });
    std.debug.print("  ...of which right                       {d}/{d}  ({d:.0}% precision)\n", .{ accepted_right, accepted, pct(accepted_right, accepted) });
    std.debug.print("  ...of which WRONG (selection yanked)    {d}\n", .{accepted - accepted_right});
    if (fits_when_default_n > 0 or fits_when_other_n > 0) {
        std.debug.print("  shadow default_fits: mean {d:.2} when row 0 was pasted (n={d}), {d:.2} when another row was (n={d})\n", .{
            mean(fits_when_default_sum, fits_when_default_n), fits_when_default_n,
            mean(fits_when_other_sum, fits_when_other_n),     fits_when_other_n,
        });
        std.debug.print("    (worth wiring in as a brake only if these two numbers sit clearly apart)\n", .{});
    }
    std.debug.print("  a live suggestion was on screen for {d}/{d}: agreement there is inflated by anchoring\n", .{ shown_live, replayed });
    std.debug.print("  input tokens per request: {d}\n", .{@divTrunc(tokens, replayed)});
}

fn evalFetchInt(db: *Db, sql: [:0]const u8) !i64 {
    const stmt = try db.prepare(sql);
    defer _ = sqlite.sqlite3_finalize(stmt);
    if (!(try storage.stepRow(stmt))) return 0;
    return sqlite.sqlite3_column_int64(stmt, 0);
}
